# volumer

./: .gitignore  .gitmodules  LICENSE  jlc_order.md  pcbs.md  readme.md
docs/: .gitignore  mkdocs.yml  requirements.txt
pcb/volumer/: fp-info-cache  rp2040.kicad_sch  volumer.kicad_prl  volumer.kicad_pro  volumer.kicad_sch  volumer.xml
pcb/volumer/production/: bom.xls
pcb/volumer_v0.1/: .gitignore  components.txt  fp-info-cache  fp-lib-table  rp2040.kicad_sch  sym-lib-table  volumer.csv  volumer.kicad_pcb  volumer.kicad_pro  volumer.kicad_sch
pcb/volumer_v0.1/bom/: ibom.html
pcb/volumer_v0.2/: .gitignore  components.txt  fp-info-cache  fp-lib-table  qr.kicad_sym  rp2040.kicad_sch  sym-lib-table  volumer_v02.csv  volumer_v02.kicad_pcb  volumer_v02.kicad_prl  volumer_v02.kicad_pro  volumer_v02.kicad_sch
pcb/volumer_v0.2/bom/: ibom.html
pcb/volumer_v0.2/libs/: qr.kicad_mod
pcb/volumer_v1.0/: #auto_saved_files#  _autosave-volumer_v1.0.kicad_pcb  _autosave-volumer_v1.0.kicad_sch  case_v1.0.stl  fp-info-cache  ibom.config.ini  qr.kicad_sym  rp2040.kicad_sch  sym-lib-table  volumer_v1.0.kicad_pcb  volumer_v1.0.kicad_prl  volumer_v1.0.kicad_pro  volumer_v1.0.kicad_sch
pcb/volumer_v1.0/bom/: ibom.html  volumer_v1.0_bom.csv
pcb/volumer_v1.0/libs/: qr.kicad_mod
pcb/volumer_v1.0/production/: designators.csv  netlist.ipc  positions.csv
src/board/c/: CMakeLists.txt  main.c
src/board/circuitpyhton/: code.py  main.old
src/board/cpy/: code.py  main.old  main.py
src/board/src/: main.c
src/board/upy/: main.py
src/pc/: config.yaml  go.mod  go.sum  main.go
(+57 files in other folders)
